--- a/CHANGES
+++ b/CHANGES
@@ -16,6 +16,7 @@ Version
 - Allow x1, ..., xn:T instead of x1:T, ..., xn:T to lighten type declarations
   of variables when they have the same type.
 - Added the command "use_variable x1 ... xn".
+- Added the command "guess i" to guess the tested session.
 - Added the command "assume replace" (variant of "replace" that does
   not check that the replacement is correct, to experiment).
 - Extended the "insert" command to insert several tests, assignments
