--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
 This file summarizes the most important changes between versions
 of the cryptographic protocol verifier.
 
+Version
+
+- Fixed a bug that could cause an internal error.
+
 Version 2.03
 
 - When a proof of equivalence fails, CryptoVerif explains where the
