updated version number in CHANGES and opam

--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
 This file summarizes the most important changes between versions
 of the cryptographic protocol verifier.
 
-Version
+Version 2.03p11
 
 - Fixed a bug that could cause an internal error.
 
