query_equiv: fixed a bug in the oracle front-end, return instructions should return a unary tuple

--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,8 @@ Version
 
 - query_equiv: optimize the translation to avoid creating oracles
 that just generate random values before a single oracle.
+- query_equiv: fixed a bug in the oracle front-end, return
+instructions should return a unary tuple.
 - Fixed a counting bug, which could lead to counting several times
 the same oracle call occurring at several places in a game, in the
 presence of equational theories.
